	forcefield files when installing

2008-07-03  Michael Banck  <mbanck@gmx.net>

	* scripts/Makefile.am (dist-hook): Do not fail if make distclean does
	not succeed in the perl and ruby directories.
	* scripts/Makefile.in: Regenerated.

	* data/Makefile.am (table_DATA): Added plugindefines.txt.
	* data/Makefile.in: Regenerated.
	* data/CMakelists.txt: Removed space-groups.xsl from to_install.

2008-07-03  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/ruby/README: Updated build instructions

2008-07-03  Michael Banck  <mbanck@gmx.net>

	* src/CMakelists.txt (LIBRARY_VERSION): New variable.
	* src/CMakelists.txt (BABEL_LIBRARY): Set VERSION property to
	${LIBRARY_VERSION}.
	
2008-07-03  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/Makefile.am, src/CMakeLists.txt: Update SONAME to 3 for
	version 2.2.0 release.

2008-07-03  Marcus D. Hanwell  <marcus@cryos.org>

	* CMakeLists.txt: Relaxed the CMake requirement to 2.4.7.

	* include/openbabel/griddata.h, src/griddata.cpp: Added three new
	getter functions to get the x, y and z axes.

	* src/CMakeLists.txt: Updated to use SONAME 3.

	* include/openbabel/mol.h, src/mol.cpp: Added extra arguments to
	GetMolWt, GetExactMass and GetSpacedFormula to optionally disable
	implicit hydrogens. Defaults to preserve existing behaviour.

	* src/grid.cpp: Fixed the Init function to apply padding correctly.

2008-07-02  Marcus D. Hanwell  <marcus@cryos.org>

	* include/openbabel/grid.h, src/grid.cpp: Updated the documentation
	and a few fixes to the function prototypes.

        * include/openbabel/griddata.h, src/griddata.cpp: Updates to the
	documentation, added a GetMaxVector function and made SetLimits const
	fixes for the vector3 form.

	* CMakeLists.txt, src/CMakeLists.txt, src/formats/CMakeLists.txt:
	Reduce the number of version variables floating around to only those
	that are used...

	* CMakeLists.txt, src/formats/CMakeLists.txt: Use a versioned plugin
	directory as autotools does.
